--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,22 @@
         <item>Half Day</item>
     </string-array>
 
+    <string-array name="blood_group">
+        <item>--Select Blood Group--</item>
+        <item>A+</item>
+        <item>A-</item>
+        <item>B+</item>
+        <item>B-</item>
+        <item>O+</item>
+        <item>O-</item>
+        <item>AB+</item>
+        <item>AB-</item>
+    </string-array>
+
+    <string-array name="job_type">
+        <item>--Select Job Type--</item>
+        <item>Permanent</item>
+        <item>Temporary</item>
+    </string-array>
+
 </resources>
